2004-08-05  Chris Kelly <ckdake@users.sf.net> 1.4.5-cvs-b93

	* Fix: Quote URLs in  block-random for better HTML compliance
 
2004-08-05  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b92

	* Fix: Adjust Subject changes also to SMTP method.

2004-08-05  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b91

	* Fix: Use unhtmlentities for subject and msg in gallery_email()

	* Fix: Add header for content charset in gallery_email()

2004-08-04  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b90

	* Change: When user wants photo captions to be filedate,
	  then now the format from config is used.

2004-08-03  Chris Kelly <ckdake@users.sf.net> 1.4.5-cvs-b89

	* Fix: Bug #1002883  Albums could be renamed to include a 
		% character in the name which is interpreted as 
		an escape character and causes all kinds of issues

2004-08-02  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b88

        * Fix: Extract _FILES in phpBB2's modules.php

        * Change: Remove modules.php.gz, add modules.php so that we can track
          code changes.  There's no real reason for it to be gzip'ed.
          - Updated HowTo.txt and removed 'unzip'...

2004-08-02  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b87

	* Fix: multi_create was b0rked

2004-08-02  Chris Kelly <ckdake@users.sf.net> 1.4.5-cvs-b86

	* Change:  Modify all popups to have the same CSS tags so that
		they will look more uniform and look better with skins.

	* Fix: misc. html cleanup including removing center tags and
		replacing with align="center"

2004-08-02  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b85

	* Fix: Correct logic in _getStyleSheetLinks 

2004-08-02  Chris Kelly <ckdake@users.sf.net> 1.4.5-cvs-b84

	* Change: Added "Return to Gallery" link to find_orphans.php

2004-08-02  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.5-cvs-b83

	* Fixed phpBB2 integration (I'd missed the big superglobals change before).
	* Fixed version number (b82 didn't bump).
