@@ -399,7 +399,6 @@ class Album {
 		}
 
 		if ($this->version < 29) {
-			mt_srand((double) microtime() * 1000000);
 			$this->fields['guid'] = md5(uniqid(mt_rand(), true));
 			$changed = 1;
 		}
@@ -1081,7 +1080,6 @@ class Album {
 				$wmName, $wmAlphaName, $wmAlign, $wmAlignX, $wmAlignY, 0, 0); 
 		}
 
-		mt_srand((double) microtime() * 1000000);
 		$this->fields['guid'] = md5(uniqid(mt_rand(), true));
 
 		return 0;
