@@ -26,7 +26,6 @@ if (isset($gallery->session->username) && !empty($gallery->session->username)) {
 }
 elseif (fs_file_exists(GALLERY_SETUPDIR . "/resetadmin")) {
 	if (!isset($gallery->session->resetAdminGuid)) {
-		mt_srand((double) microtime() * 1000000);
 		$gallery->session->resetAdminGuid = md5(uniqid(mt_rand(), true));
 	}
 }
