@@ -1,3 +1,8 @@
+2004-08-05  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b93
+
+	* Change: Only call srand() once, instead of once at each rand()
+	  location.
+
 2004-08-05  Chris Kelly <ckdake@users.sf.net> 1.4.5-cvs-b93
 
 	* Fix: Quote URLs in  block-random for better HTML compliance
